# zotero-bib-to-gh

./: LICENSE.md  README.md  SECURITY.md  _config.yml  pyproject.toml  requirements.txt  secrets.example.env  zotero-bib-to-gh.py
.github/: labeler.yml
.github/workflows/: label.yml  stale.yml  zotero-bib-to-git.yml
bibliography/: 113737.bib  156999.bib  2256884.bib  2256884.bib-last-modified-version  2391490.bib  zotero.bib
